--- a/Site/HTML/final/final.html
+++ b/Site/HTML/final/final.html
@@ -12,7 +12,7 @@
         <h1>Obrigado por Participar!</h1>
         <p>Agradecemos sua contribuição. Esperamos que tenha tido uma ótima experiência!</p>
 
-        <a href="/HTML/inicio/inicio.html" class="botao">Voltar ao Início</a>
+        <a href="../../HTML/inicio/inicio.html" class="botao">Voltar ao Início</a>
     </div>
 </body>
 </html>
