--- a/Site/HTML/inicio/inicio.html
+++ b/Site/HTML/inicio/inicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/inicioFinal.css">
+    <link rel="stylesheet" href="../../CSS/inicioFinal.css">
     
     <title>Bem-vindo!</title>
 </head>
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="tab">
             <h1>Bem-vindo!</h1>
-            <a href="/HTML/pergunta1/pergunta1.html"><button class="botao">Começar</button></a>
+            <a href="../../HTML/pergunta1/pergunta1.html"><button class="botao">Começar</button></a>
         </div>
     </div>
 </body>
