--- a/Site/HTML/pergunta1/pergunta1.html
+++ b/Site/HTML/pergunta1/pergunta1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/HTML/pergunta1/errado1A.html"><button class="botao">Monitor</button></a>
+                <a href="../../HTML/pergunta1/errado1A.html"><button class="botao">Monitor</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/HTML/pergunta1/certo1.html"><button class="botao">CLP</button></a>
+                <a href="../../HTML/pergunta1/certo1.html"><button class="botao">CLP</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/HTML/pergunta1/errado1B.html"><button class="botao">Impressora</button></a>
+                <a href="../../HTML/pergunta1/errado1B.html"><button class="botao">Impressora</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/HTML/pergunta1/errado1C.html"><button class="botao">Scanner</button></a>
+                <a href="../../HTML/pergunta1/errado1C.html"><button class="botao">Scanner</button></a>
             </div>
         </div>
     </div>
