--- a/Site/HTML/pergunta4/errado4A.html
+++ b/Site/HTML/pergunta4/errado4A.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/resposta.css">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/resposta.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
     <div class="container">
-        <h1>Errada Resposta!</h1>
+        <h1>Resposta Errada!</h1>
 
-        <p>No ágil, o foco é em iterações rápidas e feedback constante, então o detalhamento dos requisitos é feito de forma contínua, e não de uma vez só no início do projeto.</p>
+        <p>No desenvolvimento ágil, o foco é em iterações rápidas e feedback constante, então o detalhamento dos requisitos é feito de forma contínua, e não de uma vez só no início do projeto.</p>
         <br>
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="../../HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/HTML/pergunta5/pergunta5.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="../../HTML/pergunta5/pergunta5.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
