--- a/Site/HTML/pergunta4/errado4C.html
+++ b/Site/HTML/pergunta4/errado4C.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/resposta.css">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/resposta.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
     <div class="container">
-        <h1>Errada Resposta!</h1>
+        <h1>Resposta Errada!</h1>
 
-        <p>No ágil, o foco está mais em software funcionando e comunicação direta,
+        <p>No desenvolvimento ágil, o foco está mais em software funcionando e comunicação direta,
              e menos em extensa documentação, que pode ser pesada e ineficiente.</p>
         <br>
         <div class="opcoes"></div>
             <div class="opcao">
                     <div>
-                        <a href="/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                        <a href="../../HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                     </div>
                     <div>
-                        <a href="/HTML/pergunta5/pergunta5.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                        <a href="../../HTML/pergunta5/pergunta5.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                     </div>
             </div>
         </div>
