--- a/Site/HTML/pergunta4/pergunta4.html
+++ b/Site/HTML/pergunta4/pergunta4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/HTML/pergunta4/errado4A.html"><button class="botao">Detalhamento extensivo de requisitos</button></a>
+                <a href="../../HTML/pergunta4/errado4A.html"><button class="botao">Detalhamento extensivo de requisitos</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/HTML/pergunta4/certo4.html"><button class="botao">Flexibilidade e adaptabilidade às mudanças </button></a>
+                <a href="../../HTML/pergunta4/certo4.html"><button class="botao">Flexibilidade e adaptabilidade às mudanças </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/HTML/pergunta4/errado4B.html"><button class="botao">Controle rígido de cada fase do desenvolvimento</button></a>
+                <a href="../../HTML/pergunta4/errado4B.html"><button class="botao">Controle rígido de cada fase do desenvolvimento</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/HTML/pergunta4/errado4C.html"><button class="botao">Forte dependência de documentação formal</button></a>
+                <a href="../../HTML/pergunta4/errado4C.html"><button class="botao">Forte dependência de documentação formal</button></a>
             </div>
         </div>
     </div>
