--- a/Site/HTML/pergunta5/pergunta5.html
+++ b/Site/HTML/pergunta5/pergunta5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/HTML/pergunta5/errado5A.html"><button class="botao">Um conjunto de dados</button></a>
+                <a href="../../HTML/pergunta5/errado5A.html"><button class="botao">Um conjunto de dados</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/HTML/pergunta5/certo5.html"><button class="botao">Um procedimento para resolver um problema </button></a>
+                <a href="../../HTML/pergunta5/certo5.html"><button class="botao">Um procedimento para resolver um problema </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/HTML/pergunta5/errado5B.html"><button class="botao">Uma aplicação de software</button></a>
+                <a href="../../HTML/pergunta5/errado5B.html"><button class="botao">Uma aplicação de software</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/HTML/pergunta5/errado5C.html"><button class="botao">Uma máquina que processa dados</button></a>
+                <a href="../../HTML/pergunta5/errado5C.html"><button class="botao">Uma máquina que processa dados</button></a>
             </div>
         </div>
     </div>
