--- a/Site/HTML/pergunta6/pergunta6.html
+++ b/Site/HTML/pergunta6/pergunta6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/HTML/pergunta6/certo6.html"><button class="botao">Treinamento de um robô para navegar em um labirinto </button></a>
+                <a href="../../HTML/pergunta6/certo6.html"><button class="botao">Treinamento de um robô para navegar em um labirinto </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/HTML/pergunta6/errado6A.html"><button class="botao">Agrupamento de clientes com base em seus hábitos de compra</button></a>
+                <a href="../../HTML/pergunta6/errado6A.html"><button class="botao">Agrupamento de clientes com base em seus hábitos de compra</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/HTML/pergunta6/errado6B.html"><button class="botao">Análise de regressão para previsão de vendas</button></a>
+                <a href="../../HTML/pergunta6/errado6B.html"><button class="botao">Análise de regressão para previsão de vendas</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/HTML/pergunta6/errado6C.html"><button class="botao">Classificação de imagens</button></a>
+                <a href="../../HTML/pergunta6/errado6C.html"><button class="botao">Classificação de imagens</button></a>
             </div>
         </div>
     </div>
