--- a/Site/HTML/pergunta7/pergunta7.html
+++ b/Site/HTML/pergunta7/pergunta7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/HTML/pergunta7/errado7A.html"><button class="botao"> DELETE</button></a>
+                <a href="../../HTML/pergunta7/errado7A.html"><button class="botao"> DELETE</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/HTML/pergunta7/errado7B.html"><button class="botao">ALTER</button></a>
+                <a href="../../HTML/pergunta7/errado7B.html"><button class="botao">ALTER</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/HTML/pergunta7/errado7C.html"><button class="botao">INSERT</button></a>
+                <a href="../../HTML/pergunta7/errado7C.html"><button class="botao">INSERT</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/HTML/pergunta7/certo7.html"><button class="botao">UPDATE </button></a>
+                <a href="../../HTML/pergunta7/certo7.html"><button class="botao">UPDATE </button></a>
             </div>
         </div>
     </div>
