--- a/Site/HTML/pergunta1/errado1C.html
+++ b/Site/HTML/pergunta1/errado1C.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/resposta.css">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/resposta.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
     <div class="container">
-        <h1>Errada Resposta!</h1>
+        <h1>Resposta Errada!</h1>
 
         <p>Um scanner digitaliza documentos ou imagens, e embora possa ser parte de sistemas de automação de escritório,
              não tem função em automação industrial para controle de processos.</p>
@@ -17,10 +17,10 @@
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/HTML/pergunta1/pergunta1.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="../../HTML/pergunta1/pergunta1.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/HTML/pergunta2/pergunta2.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="../../HTML/pergunta2/pergunta2.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
