--- a/Site/HTML/pergunta12/errado12B.html
+++ b/Site/HTML/pergunta12/errado12B.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/resposta.css">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/resposta.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
     <div class="container">
-        <h1>Errada Resposta!</h1>
-
+        <h1>Resposta Errada!</h1>
+        
         <p>show() não é uma função nativa do JavaScript para exibir alertas. 
             Pode ser usada em bibliotecas externas para manipulação de elementos, mas não para exibir alertas.</p>
         <br>
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/HTML/pergunta12/pergunta12.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="../../HTML/pergunta12/pergunta12.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/HTML/pergunta13/pergunta13.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="../../HTML/pergunta13/pergunta13.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
