--- a/Site/HTML/pergunta13/pergunta13.html
+++ b/Site/HTML/pergunta13/pergunta13.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/HTML/pergunta13/errado13A.html"><button class="botao">cm</button></a>
+                <a href="../../HTML/pergunta13/errado13A.html"><button class="botao">cm</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/HTML/pergunta13/certo13.html"><button class="botao"> px </button></a>
+                <a href="../../HTML/pergunta13/certo13.html"><button class="botao"> px </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/HTML/pergunta13/errado13B.html"><button class="botao">km</button></a>
+                <a href="../../HTML/pergunta13/errado13B.html"><button class="botao">km</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/HTML/pergunta13/errado13C.html"><button class="botao">m</button></a>
+                <a href="../../HTML/pergunta13/errado13C.html"><button class="botao">m</button></a>
             </div>
         </div>
     </div>
