--- a/Site/HTML/pergunta14/errado14C.html
+++ b/Site/HTML/pergunta14/errado14C.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/resposta.css">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/resposta.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
     <div class="container">
-        <h1>Errada Resposta!</h1>
+        <h1>Resposta Errada!</h1>
 
         <p>O atributo target é usado para especificar onde abrir o link
              (por exemplo, em uma nova aba), mas não define o destino do link.</p>
@@ -17,10 +17,10 @@
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/HTML/pergunta14/pergunta14.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="../../HTML/pergunta14/pergunta14.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/HTML/final/final.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="../../HTML/final/final.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>  
             </div> 
         </div>
