--- a/Site/HTML/pergunta3/errado3A.html
+++ b/Site/HTML/pergunta3/errado3A.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/resposta.css">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/resposta.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
     <div class="container">
-        <h1>Errada Resposta!</h1>
+        <h1>Resposta Errada!</h1>
 
         <p>Embora em metodologias tradicionais o gerente de projeto tenha esse papel, no Scrum essa função é substituída pelo Scrum Master,
              que foca na aplicação das práticas ágeis.</p>
@@ -17,10 +17,10 @@
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="../../HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="../../HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
