--- a/Site/HTML/pergunta6/errado6B.html
+++ b/Site/HTML/pergunta6/errado6B.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/resposta.css">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/resposta.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
     <div class="container">
-        <h1>Errada Resposta!</h1>
+        <h1>Resposta Errada!</h1>
 
         <p>A regressão é uma técnica de aprendizado supervisionado,
              usada para prever resultados contínuos com base em variáveis.</p>
@@ -17,10 +17,10 @@
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/HTML/pergunta6/pergunta6.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="../../HTML/pergunta6/pergunta6.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/HTML/pergunta7/pergunta7.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="../../HTML/pergunta7/pergunta7.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
