--- a/Site/HTML/pergunta2/pergunta2.html
+++ b/Site/HTML/pergunta2/pergunta2.html
@@ -26,7 +26,7 @@
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="../../HTML/pergunta2/certo2.html"><button class="botao">Converter energia elétrica em movimento mecânico </button></a>
+                <a href="../../HTML/pergunta2/certo2.html"><button class="botao">Converção de energia elétrica para mecanica</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
