Alteração da página correto

--- a/public/resposta_correta.html
+++ b/public/resposta_correta.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Resposta Correta</title>
 </head>
 <body>
+    <!-- Início do conteúdo visível da página -->
     <div class="container">
         <h1>Parabéns! Você acertou!</h1>
         <p>Sua resposta está correta. Continue assim!</p>
-        <button onclick="proximaPergunta()">Próxima Pergunta</button>
+        <!-- Botão que, ao ser clicado, chama a função JavaScript 'proximaPergunta' para redirecionar o usuário -->
+        <button class="botao" onclick="proximaPergunta()">Próxima Pergunta</button>
     </div>
+
     <script>
+        // Função que redireciona o usuário para a página de início ao avançar para a próxima pergunta
         function proximaPergunta() {
             window.location.href = "/inicio/inicio.html";
+            // Redireciona o usuário para o arquivo 'inicio.html' localizado na pasta 'inicio'
         }
     </script>
 </body>
