--- a/public/resposta_incorreta.html
+++ b/public/resposta_incorreta.html
@@ -1,33 +1,41 @@
-<!-- resposta_incorreta.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Resposta Incorreta</title>
 </head>
 <body>
     <h1>Resposta Incorreta</h1>
+    <!-- mensagem com a resposta correta e explicação será exibida -->
     <p id="mensagem"></p>
-    <a href="index.html">Voltar para o início</a>
+    <!-- Link para retornar ao início do questionário -->
+    <a href="/inicio/inicio.html">Voltar para o início</a>
 
     <script>
-        // Função para obter parâmetros da URL
+        // Função para extrair parâmetros da URL da página
         function getUrlParams() {
+            // Objeto para armazenar os parâmetros extraídos
             const params = {};
+            // Obtém a string de consulta (query) da URL, removendo o "?" inicial
             const search = window.location.search.substring(1);
+            // Divide a string em pares "chave=valor"
             const pairs = search.split("&");
+            // Itera por cada par de "chave=valor" para decodificar e salvar no objeto params
             pairs.forEach(pair => {
                 const [key, value] = pair.split("=");
                 params[decodeURIComponent(key)] = decodeURIComponent(value);
             });
+            // Retorna o objeto com todos os parâmetros da URL
             return params;
         }
 
-        // Usando os parâmetros para mostrar a resposta correta e a explicação
+        // Extrai os parâmetros da URL usando a função getUrlParams
         const params = getUrlParams();
+        // Cria uma mensagem para o usuário com a resposta correta e explicação fornecidas na URL
         const mensagem = `A alternativa correta era ${params.correta}. ${params.explicacao}`;
+        // Define o conteúdo do parágrafo com id "mensagem" para exibir a mensagem ao usuário
         document.getElementById('mensagem').textContent = mensagem;
     </script>
 </body>
