Alteração da página_incorreta

--- a/public/resposta_incorreta.html
+++ b/public/resposta_incorreta.html
@@ -7,11 +7,15 @@
     <title>Resposta Incorreta</title>
 </head>
 <body>
-    <h1>Resposta Incorreta</h1>
-    <!-- mensagem com a resposta correta e explicação será exibida -->
-    <p id="mensagem"></p>
-    <!-- Link para retornar ao início do questionário -->
-    <a href="/inicio/inicio.html">Voltar para o início</a>
+
+    <!-- Estrutura da página para resposta incorreta -->
+    <div class="container">
+        <h1>Resposta Incorreta</h1>
+        <!-- Parágrafo para exibir a resposta correta e uma explicação ao usuário -->
+        <p id="mensagem"></p>
+        <!-- Botão para retornar ao início do questionário -->
+        <button class="botao"><a href="/inicio/inicio.html">Voltar para o início</a></button>
+    </div>
 
     <script>
         // Função para extrair parâmetros da URL da página
